Heading, responsive text, dropdowns

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -33,7 +33,7 @@ const {c, border, title, icon, number, color, isSmall, shadow, stepDisplay} = As
 	}
 
 	{number &&
-		<div class="absolute -left-2 -top-3">
+		<div class="absolute left-2 -top-4 lg:-left-2 lg:-top-2">
 			<p class="text-purple text-[100px] font-montserrat font-medium leading-0">{ number }</p>
 		</div>
 	}
