--- a/src/pages/infrastructures.astro
+++ b/src/pages/infrastructures.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Headline from '../components/Headline.astro';
+import HeadlineBasic from '../components/HeadlineBasic.astro';
 import Tips from '../components/Tips.astro';
 import ProjectStripe from '../components/ProjectStripe.astro';
 import Section from '../components/Section.astro';
@@ -8,7 +8,7 @@ import Card from '../components/Card.astro';
 import ButtonContact from '../components/ButtonContact.astro';
 import Image from '../components/atom/Image.astro';
 import Button from '../components/atom/Button.astro';
-import H1 from '../components/H1.astro';
+import PageHero from '../components/PageHero.astro';
 
 
 const bigCards = [
@@ -33,27 +33,9 @@ const cards = [
 ---
 
 <Layout title="Preezeo - Infrastructures collectives">
-    <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
-        <Headline />
-    </section>
+    <HeadlineBasic />
 
-    <Section c="relative mt-20 ml-20">
-        <H1 text="pour infrastructures collectives" />
-        <div class="link-svg">
-            <div class="absolute -top-11 -right-3">
-                <Image 
-                    src="/img/icons/apartement.svg" 
-                    alt="apartement icon"
-                    fetchPriority={true}
-                />
-            </div>
-            <Image 
-                src="/img/svg/link-bottom.svg" 
-                alt=""
-                fetchPriority={true}
-            />
-        </div>
-    </Section>
+    <PageHero h1="pour infrastructures collectives" icon="apartement"/>
 
     <Section c="lg:px-6">
         <div class="flex flex-col gap-10 lg:px-20">
