--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,8 +34,8 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<!-- <link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" /> -->
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link rel="preload" as="font" href="/fonts/Alien Robot.ttf" type="font/ttf" crossorigin="anonymous"/>
@@ -47,7 +47,7 @@ const { title } = Astro.props;
 		<link rel="preload" as="image" href="/img/logo_purple.svg" type="image/svg+xml" />
 		<title>{title}</title>
 	</head>
-	<body class="flex flex-col bg-light font-montserrat text-base font-normal leading-[140%]">
+	<body class="flex flex-col bg-light text-metal font-montserrat text-base font-normal leading-[140%]">
 		<Header />	
 		<main class="wrapper">
 			<slot />
